增加SelectKey的支持